fix [#11] Prevent preview jumping

--- a/iPreview.css
+++ b/iPreview.css
@@ -19,5 +19,8 @@
 	box-shadow: 		2px 2px 10px rgba(0, 0, 0, 0.4);
 }
 
+#iPreview .image-container {position: relative; z-index: 10;}
+#iPreviewMask {position: fixed; z-index:5;}
+
 #iPreview a {display: inline-block; width: 100%;}
 #iPreview img {border: none; width: 100%;}
